Added changing user info